# pwno-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CI_CD_SETUP_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  attach.gdb  cloudbuild.yaml  deploy.sh  docker-build.local.sh  docker-build.sh  docker-compose.test.yml  docker-compose.yml  main.py  opencode.json  pwnomcp.service  pyproject.toml  pytest.ini  requirements.txt  run_server.py
.github/workflows/: build.yml  ci.yml  publish-ghcr.yml
docs/: CI_CD.md  architecture.mdx  background-story.mdx  contributing.mdx  development.mdx  docs.json  index.mdx  license.mdx  package.json  quickstart.mdx  troubleshooting.mdx  verify-setup.mdx
docs/client-setup/: claude-code.mdx  claude-desktop.mdx  codex-cli.mdx  cursor.mdx  index.mdx  opencode.mdx
docs/concepts/: response-shapes.mdx  sessions.mdx  transports-and-runtime.mdx  workspace-paths.mdx
docs/guides/: attach-to-running-process.mdx  build-and-helper-processes.mdx  first-debug-session.mdx  index.mdx  interactive-exploit-loop.mdx  multi-session-workflows.mdx
docs/operations/: configuration.mdx  docker-and-compose.mdx
docs/tool-reference/: attach-api.mdx  debug-sessions.mdx  index.mdx  inspection.mdx  processes.mdx  pwncli.mdx  python.mdx  repos-and-retdec.mdx  repositories.mdx  retdec.mdx
examples/: auth_usage_example.py  shell_client.py  websocket_client.html  websocket_client.py
pwnomcp/: __init__.py  __main__.py  asgi.py  cli.py  context.py  gdb_controller.py  lifespan.py  logger.py  mcp.py  mcp_server.py  pwnpipe.py  runtime.py  server.py  services.py  websocket.py
pwnomcp/gdb/: __init__.py  controller.py
pwnomcp/http/: __init__.py  attach.py  health.py  models.py
pwnomcp/retdec/: retdec.py
pwnomcp/router/: __init__.py  attach.py  health.py  mcp.py
pwnomcp/state/: __init__.py  registry.py  session.py
pwnomcp/tools/: __init__.py  breakpoint.py  common.py  debug.py  git.py  inspect.py  memory.py  processes.py  pwncli.py  pwndbg.py  python.py  python_env.py  repos.py  retdec.py  stdio.py  subproc.py
pwnomcp/tools/backends/: __init__.py  git.py  pwndbg.py  python.py  subproc.py
pwnomcp/utils/: color.py  format.py  paths.py
pwnomcp/utils/auth/: handler.py
scripts/: run_ci.sh
tests/: README.md  __init__.py  mcp_client_test.py  test_attach_endpoint.py  test_cli.py  test_healthz.py  test_mcp_catch_errors.py  test_paths.py  test_session_state.py  test_subprocess_guardrails.py  test_tool_descriptions.py
tests/e2e/: __init__.py  test_e2e_scenarios.py
tests/integration/: __init__.py  test_mcp_tools.py
tests/unit/: __init__.py  test_gdb_controller.py  test_session_state.py
