[project]
name = "pwno-mcp"
version = "0.1.0"
description = "MCP server for autonomous low-level security research with pwndbg"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "Pwno Team"},
]
dependencies = [
    "mcp",
    "pygdbmi>=0.11.0.0",
    "psutil>=5.9.0",
    "rich>=14.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pwntools>=4.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "mypy",
]
